[gd_scene load_steps=4 format=3 uid="uid://cavgbb0otl4hg"]

[ext_resource type="Script" uid="uid://br03nvflmbaxo" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="Texture2D" uid="uid://ja6h67d0psy2" path="res://assets/container.png" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://d0kbb8n5inu08" path="res://generator_panel.tscn" id="3_h2yge"]

[node name="main" type="Node2D"]
script = ExtResource("1_0xm2m")

[node name="Container" type="Sprite2D" parent="."]
position = Vector2(284, 304)
scale = Vector2(0.315, 0.315)
texture = ExtResource("1_ig7tw")

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 94.0
offset_top = 141.0
offset_right = 472.0
offset_bottom = 469.0

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 37.0
offset_top = 508.0
offset_right = 697.0
offset_bottom = 647.0
theme_override_font_sizes/normal_font_size = 84
text = "0 contracts
"

[node name="Control" type="VBoxContainer" parent="."]
visible = false
offset_left = 544.0
offset_top = 257.0
offset_right = 1122.0
offset_bottom = 612.0

[node name="ShopRichTextLabel" type="RichTextLabel" parent="Control"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 50
text = "Shop"
horizontal_alignment = 1

[node name="BuyCerkButton" type="Button" parent="Control"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Buy Clerk - %s contracts"

[node name="BuyAutopenButton" type="Button" parent="Control"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Buy Clerk - %s contracts"

[node name="ProductionTimer" type="Timer" parent="."]
autostart = true

[node name="LabelPorkFuturesWarehouse" type="RichTextLabel" parent="."]
offset_right = 1152.0
offset_bottom = 98.0
theme_override_font_sizes/normal_font_size = 63
text = "Pork Futures Warehouse"
horizontal_alignment = 1

[node name="Generators" type="VBoxContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 500)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 739.0
offset_top = 129.0
offset_right = 1082.0
offset_bottom = 629.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Clerk" parent="Generators" instance=ExtResource("3_h2yge")]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
base_price = 15
generator_name = "Clerk"

[node name="Autopen" parent="Generators" instance=ExtResource("3_h2yge")]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
base_price = 100
production_rate = 5
generator_name = "Autopen"
unlock_score = 80

[node name="Broker" parent="Generators" instance=ExtResource("3_h2yge")]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
base_price = 1000
production_rate = 50
generator_name = "Broker"
unlock_score = 800

[node name="Manager" parent="Generators" instance=ExtResource("3_h2yge")]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
base_price = 12000
production_rate = 250
generator_name = "Manager"
unlock_score = 8000

[node name="Trader" parent="Generators" instance=ExtResource("3_h2yge")]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
base_price = 130000
production_rate = 1500
generator_name = "Trader"
unlock_score = 80000

[node name="Federal Pork Reserve" parent="Generators" instance=ExtResource("3_h2yge")]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
base_price = 250000
production_rate = 3000
generator_name = "Federal Pork Reserve"
unlock_score = 800000

[node name="DebugPanel" type="Panel" parent="."]
unique_name_in_owner = true
offset_right = 117.0
offset_bottom = 75.0

[node name="debugButton" type="Button" parent="DebugPanel"]
layout_mode = 0
offset_right = 37.0
offset_bottom = 30.0

[node name="DebugTextEdit" type="TextEdit" parent="DebugPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_top = 40.0
offset_right = 105.0
offset_bottom = 70.0

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="Control/BuyCerkButton" to="." method="_on_buy_cerk_button_button_down"]
[connection signal="button_down" from="Control/BuyAutopenButton" to="." method="_on_buy_autopen_button_button_down"]
[connection signal="timeout" from="ProductionTimer" to="." method="_on_production_timer_timeout"]
[connection signal="button_down" from="DebugPanel/debugButton" to="." method="_on_debug_button_button_down"]
